--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.0",
+    "express-message": "^1.2.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.18.0",
     "joi": "^17.13.3",
     "major-project": "file:",
     "method-override": "^3.0.0",
-    "mongoose": "^8.6.2",
+    "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
